ingress-secure-app-cilium/gateway/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shoppingapp-route
  namespace: webapps
spec:
  parentRefs:
  - name: shared-gateway
    namespace: istio-ingress
  hostnames:
  - shoppingapp.cloudapps.lvnlab.internal
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend-external
      port: 80
